--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <!-- KPIs -->
     <div class="section">
       <h2>Water Quality Parameters</h2>
-      <small style="color:var(--muted); font-style:italic;">Demo Version: แสดงเฉพาะค่า EC และ TDS ค่าอื่นเป็น 0</small>
+      <small style="color:var(--muted); font-style:italic;">Demo Version: แสดงเฉพาะค่า EC และ TDS </small>
       <div class="rule"></div>
     </div>
     <div class="kpis">
